# TrajecSimu

./: .gitignore  LICENSE  README.md  cprofile.txt  mkdocs.yml  pyproject.toml  メモ帳で実行.txt  飛行シミュレーション-ログ-.txt
data/Config_sample/: sample_config_camellia.csv
data/Parameters_csv/: 2023izu.csv  23noshiro.csv  23noshiroin24.csv  24noshiro.csv  Fuk.csv  Hyon.csv  Izu23.csv  OB_Rocket_ver.1102.csv  PQ2.csv  PQconfig_izu2022_v3.csv  UTAT.csv  copta3.csv  fuk2023.csv  hissei.csv  hyon1.csv  izuv1.csv  kyudai.csv  no1.csv  no_hojo.csv  pinapo.csv  uchinoura.csv  uchinoura_v1.csv  新しいテキスト ドキュメント.txt  見よこれが例だ.csv
data/Thrust_curve_csv/: 20190106_Thrust_LPF_downsampling.csv  20220612_Thurstcurve.csv  20230610_OHL.csv  20230617_OHL900.csv  20230617_OHL900改.csv  20231209.txt  20231209仮.csv  20231209真.csv  2023izu.csv  20240228.csv  20240517.csv  20240610_ohl-900.csv  20240616.csv  20240616_tra.csv  20240618_1回目.csv  20240630_0.001刻み.csv  24dai.csv  24dai2.csv  24fuk.csv  612.csv  C11-3_motor.csv  C6-3motor.csv  Hyon612.csv  Hypertek_835CC125J-K240.csv  I260_2022.06.12.csv  J250_2.21.csv  J250_FTE.csv  Re20240630_2nd.csv  UTAT.csv  UTAT2.csv  cbl522.csv  cblfft611.csv  cblfft612.csv  cblfft7101.csv  eitetsu.csv  fft.csv  fft710.csv  thrustcurve_noshiro2021_4.csv  uchinoura.csv  uchinoura_v1.csv  (+1 more)
data/input/: gust_wind.yaml  landed_area.yaml
data/location_parameters/: SAMPLE.json  fukuoka.json  game.json  izu.json  noshiro.json  noshiro_sea.json  noshiro_seanew.json  uchinoura.json
data/result/: coordinates.csv  summary.csv
data/sample/: sample.yaml
data/wind_forecast_csv/: 20230822.csv  20230822w.csv  20230823.csv  20230824.csv  202308240600.csv  202308240600ver2.csv  202308240900.csv  202308240900ver2.csv  20240725noshirog.csv  202408202nd.csv  202408203rd.csv  202408204th.csv  20240820after.csv  20240820before.csv  2024hiraodai_toppu.csv  2024hiraodai_tsujohu.csv  2024noshirog.csv  2024noshiron.csv  forecast_wind_jst_c_2023082221_f_2023082221.csv  forecast_wind_jst_c_2023082321_f_2023082406.csv  interp_wind_20170820.csv  ppppp.csv  wind .csv  wind1.csv  wind2.csv  wind3.csv  wind4.csv  wind_Izu_1.22.csv  wind_noshiro23-gust.csv  wind_noshiro23.csv  wind_noshirosea.csv  wind_noshirosea1.csv  windsub.csv
docs/: fuel_table.md  generate_param_xml.md  jsb_runner.md  parameter_product.md  schema.md  usage.md  util.md  wind_table.md  xml_renderer.md  yaml_loader.md
src/: copta3.py  gui4Trajec.py  izu.py  izu1.py  main.py  no.py  take.py  tikurin.py
src/Scripts/: errors.py  interface.py  kmlplot.py  parameters.py  postprocess.py  statistics_wind.py  trajectory_main.py
src/StatwindTool-master/: generate_edge_wind.py  generate_error_ellipse.py
src/jsbsim/: jsb_runner.py  sample.yaml  sample_cdmach_table.csv
src/jsbsim_support/: generate_param_xml.py  jsb_runner.py
(+313 files in other folders)
