[project]
name = "trajecsimu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "jsbsim>=1.2.2",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "numpy-quaternion>=2024.0.8",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.3",
    "pymap3d>=3.1.0",
    "pyproj>=3.7.1",
    "scipy>=1.15.2",
    "setuptools>=79.0.0",
    "simplekml>=1.3.6",
    "sympy>=1.13.3",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src"
]   

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]


[tool.ruff]
target-version="py312"
line-length=120
select = ["ALL"]

ignore = [
    "G004", # `logging-f-string` : loggingでf-stringを使いたい
    "D415", # `missing-terminal-punctuation` : docstring日本語で書きます
    "TRY003", # ``
]
fixable = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
show_error_codes = true
error_summary = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true

python_version = "3.12"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
