[project]
name = "trajecsimu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "jsbsim>=1.2.2",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "simplekml>=1.3.6",
    "omegaconf>=2.3.0",
    "jinja2>=3.1.6",
    "tqdm>=4.67.1",
    "joblib>=1.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.15",
    "mkdocstrings-python>=1.16.10",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src"
]   

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]


[tool.ruff]
target-version="py312"
line-length=120
select = ["ALL"]

ignore = [
    "G004", # `logging-f-string` : loggingでf-stringを使いたい
    "D415", # `missing-terminal-punctuation` : docstring日本語で書きます
    "TRY003", # ``
]
fixable = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
show_error_codes = true
error_summary = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

warn_redundant_casts = true
warn_unused_ignores = true

python_version = "3.12"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

